# webscraping

aula01/: pyproject.toml
aula01/aula01/: get_my_ip.py  ml_search.py
